--- a/website/www/site/layouts/shortcodes/language-switcher.html
+++ b/website/www/site/layouts/shortcodes/language-switcher.html
@@ -26,6 +26,9 @@
       {{ if eq $lang "typescript" }}
         <li data-value="typescript">TypeScript SDK</li>
       {{ end }}
+      {{ if eq $lang "rust" }}
+        <li data-value="rust">Rust SDK</li>
+      {{ end }}
     {{ end }}
   </ul>
 </nav>
